--- a/docs/tecnicos/mt07.md
+++ b/docs/tecnicos/mt07.md
@@ -3,7 +3,7 @@
 
 ## Introducción
 
-En este módulo exploramos herramientas y lenguajes clave para el desarrollo de interfaces gráficas, aplicaciones interactivas y sistemas de control conectados. A continuación, encontrarás una descripción detallada de los temas abordados y sus aplicaciones.
+En este módulo exploramos herramientas y lenguajes clave para el desarrollo de interfaces gráficas, aplicaciones interactivas y sistemas de control conectados. A continuación, se detallan los temas abordados y sus aplicaciones.
 
 ### Processing
 
@@ -116,11 +116,13 @@ Extra: que muestre información de algún sensor, servicio externo, base de dato
 
 Desarrollo: 
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT07/1733755902431.jpg"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT07/1733755864354.jpg"></div>
 
 Como temática a abordar en este desafío elegí el café, siempre café. En la imagen superior se puede apreciar el rudimentario recurso implementado en la oficina para informar el estado del café preparado en el trabajo. 
 
 Para esto se utiliza un post-it con el mensaje “Hay café” y la fecha de elaboración. Este mismo concepto lo quise implementar mediante el uso de una ESP 32, una pantalla OLED tres pulsadores y un sensor de temperatura digital 18B20.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT07/1733755902431.jpg"></div>
 
 El funcionamiento del dispositivo es simple, en el display se muestran las indicaciones de uso, cada botón tiene la función de enviar un mensaje destino (Hay café, Acabo de prepararlo y No hay café) el cual se publica en el sitio web acompañado de la hora de preparación y la temperatura del café.
 
