--- a/docs/tecnicos/mt09.md
+++ b/docs/tecnicos/mt09.md
@@ -1,1 +1,443 @@
-### WIP
+
+# MT09 - Moldes
+
+
+## Introducción 
+
+
+El concepto de molde en el ámbito de la fabricación digital y manufactura se refiere a una herramienta o dispositivo que sirve para dar forma a un material mediante la aplicación de presión o calor. Este material, que puede ser plástico, metal, cerámica, entre otros, adopta la forma del molde durante el proceso de solidificación o curado.
+
+El proceso de moldeo consiste en utilizar el molde para reproducir piezas de manera eficiente, logrando uniformidad en dimensiones y acabados. Este procedimiento es fundamental en diversas industrias, desde la automotriz hasta la de productos de consumo.
+
+
+La técnica del moldeo tiene sus raíces en la antigüedad, cuando civilizaciones como la egipcia y la mesopotámica utilizaban moldes rudimentarios para fabricar objetos de cerámica y metal. Con la revolución industrial en el siglo XIX, el proceso de moldeo evolucionó significativamente gracias al desarrollo de materiales y maquinaria más avanzados. En el siglo XX, la invención de los plásticos revolucionó aún más esta técnica, permitiendo la producción masiva de piezas con costos reducidos.
+
+Hoy en día, el moldeo ha incorporado tecnologías digitales, como el diseño asistido por computadora (CAD) y la impresión 3D, facilitando la creación de moldes personalizados con mayor precisión y rapidez.
+
+### Aplicaciones
+
+Los moldes se utilizan en una amplia variedad de sectores:
+
+Industria automotriz: Fabricación de piezas como parachoques, paneles y componentes internos.
+
+Construcción: Producción de bloques de concreto, piezas prefabricadas y elementos arquitectónicos.
+
+Industria médica: Moldeo de dispositivos médicos y prótesis personalizadas.
+
+Electrónica: Creación de carcasas y componentes internos de dispositivos.
+
+Consumo masivo: Producción de envases, juguetes y artículos del hogar.
+
+### Tipos de Moldes
+
+Existen diversos tipos de moldes, dependiendo del material y la técnica de fabricación:
+
+Moldes de inyección: Usados principalmente para plásticos, ideales para la producción en masa.
+
+Moldes de compresión: Utilizados para materiales como caucho y plásticos termoestables.
+
+Moldes de fundición: Empleados para metales como aluminio, hierro y acero.
+
+Moldes de silicona: Comunes en la creación de prototipos y productos de bajo volumen.
+
+Moldes de termoformado: Utilizados para dar forma a láminas plásticas mediante calor.
+
+Herramientas de Moldeo
+
+Las herramientas necesarias para el proceso de moldeo incluyen:
+
+Prensas hidráulicas o mecánicas: Para aplicar presión en moldes de inyección o compresión.
+
+Hornos o sistemas de calentamiento: Necesarios para fundir materiales o curar compuestos termoestables.
+
+Software de diseño: Como AutoCAD o SolidWorks, empleados para diseñar moldes con precisión.
+
+Impresoras 3D: Para crear prototipos de moldes o moldes funcionales.
+
+Máquinas CNC: Para mecanizar moldes metálicos con alta precisión.
+
+### Diseño para Moldes
+
+El diseño de un molde requiere considerar diversos factores, como:
+
+Geometría de la pieza: Para garantizar un llenado uniforme y evitar defectos.
+
+Material del molde: Determinado por el tipo de material a moldear y las condiciones del proceso.
+
+Sistema de enfriamiento: Fundamental en moldes de inyección para acelerar el ciclo de producción.
+
+Ángulo de desmoldeo: Diseñado para facilitar la extracción de la pieza sin daños.
+
+Tolerancias: Especificaciones dimensionales que aseguren el correcto ensamblaje de las piezas.
+
+### Materiales para Moldear
+
+Los materiales más comunes para moldeo incluyen:
+
+Plásticos: Como polietileno, polipropileno y ABS.
+
+Metales: Aluminio, acero y bronce.
+
+Cauchos: Naturales o sintéticos.
+
+Cerámicas: Para aplicaciones de alta temperatura.
+
+Resinas: Como epóxicas y poliuretanos.
+
+La elección del material depende de las propiedades requeridas en el producto final, como resistencia, flexibilidad o durabilidad.
+
+### Medidas de Seguridad
+
+El moldeo, como cualquier proceso industrial, implica riesgos que deben ser gestionados con medidas de seguridad adecuadas:
+
+Equipos de protección personal (EPP): Uso de guantes resistentes al calor, gafas de seguridad y ropa adecuada.
+
+Mantenimiento de equipos: Inspecciones regulares para evitar fallos mecánicos o eléctricos.
+
+Capacitación: Formación del personal en el manejo seguro de maquinaria y materiales.
+
+Control de emisiones: Sistemas de ventilación para evitar la acumulación de gases o vapores tóxicos.
+
+Señalización: Marcado de zonas peligrosas y procedimientos de emergencia claramente establecidos.
+
+Estas medidas son esenciales para garantizar un entorno de trabajo seguro y minimizar el riesgo de accidentes.
+
+
+## Actividad MT09
+
+Para la realización de la actividad práctica del módulo de Moldes he decidido crear el molde para recrear una pieza del proyecto final. Se trata de la carcasa del extrusor. La elección de esta pieza como modelo a recrear se basa en la necesidad de experimentar diferentes materiales refractarios capaces de resistir las temperaturas a la cual las partes del extrusor están expuestas. 
+
+### Desarrollo:
+
+Lo primero fue crear el molde, para ello tomamos como referencia el CAD de nuestro modelo final de nuestro modelo final en Onshape y procedemos a crear las diferentes partes de nuestro molde, contemplando las características geométricas de nuestro modelo y el posterior desmolde, cuántas partes se necesitan y cómo deberán estar diseñados los encastres de cada pieza del molde. Finalmente se definió que un total de 8 piezas principales serían suficientes para crear el molde adecuado. 
+
+
+<div align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/wgrfSmlBg-I?si=PIe-XLs0ALDzMiQs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+Se imprimieron en PLA blanco en la Ultimaker 3 del LabA, lamentablemente las piezas más pequeñas (que ofician de ductos para los cables) se estropearon por lo que no las usaremos para las pruebas.
+
+<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166955.jpg" ></iframe></div>
+
+ 1- Prueba con material compuesto
+Para esta prueba se utilizó un material compuesto de aserrín, cola vinílica y arcilla de secado sin horno. Tiempo de secado 24h.
+ 
+<div align="center">
+
+<html>
+    <head>
+        <style>
+            .slide {
+                position: relative;
+                box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+                margin-top: 26px;
+            }
+            .slide-inner {
+                position: relative;
+                overflow: hidden;
+                width: 100%;
+                height: calc( 300px + 3em);
+            }
+            .slide-open:checked + .slide-item {
+                position: static;
+                opacity: 100;
+            }
+            .slide-item {
+                position: absolute;
+                opacity: 0;
+                -webkit-transition: opacity 0.6s ease-out;
+                transition: opacity 0.6s ease-out;
+            }
+            .slide-item img {
+                display: block;
+                height: auto;
+                max-width: 100%;
+            }
+            .slide-control {
+                background: rgba(0, 0, 0, 0.28);
+                border-radius: 50%;
+                color: #fff;
+                cursor: pointer;
+                display: none;
+                font-size: 40px;
+                height: 40px;
+                line-height: 35px;
+                position: absolute;
+                top: 50%;
+                -webkit-transform: translate(0, -50%);
+                cursor: pointer;
+                -ms-transform: translate(0, -50%);
+                transform: translate(0, -50%);
+                text-align: center;
+                width: 40px;
+                z-index: 10;
+            }
+            .slide-control.prev {
+                left: 2%;
+            }
+            .slide-control.next {
+                right: 2%;
+            }
+            .slide-control:hover {
+                background: rgba(0, 0, 0, 0.8);
+                color: #aaaaaa;
+            }
+            #slide-1:checked ~ .control-1,
+            #slide-2:checked ~ .control-2,
+            #slide-3:checked ~ .control-3 {
+                display: block;
+            }
+            .slide-indicador {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                position: absolute;
+                bottom: 2%;
+                left: 0;
+                right: 0;
+                text-align: center;
+                z-index: 10;
+            }
+            .slide-indicador li {
+                display: inline-block;
+                margin: 0 5px;
+            }
+            .slide-circulo {
+                color: #828282;
+                cursor: pointer;
+                display: block;
+                font-size: 35px;
+            }
+            .slide-circulo:hover {
+                color: #aaaaaa;
+            }
+            #slide-1:checked ~ .control-1 ~ .slide-indicador 
+                 li:nth-child(1) .slide-circulo,
+            #slide-2:checked ~ .control-2 ~ .slide-indicador 
+                  li:nth-child(2) .slide-circulo,
+            #slide-3:checked ~ .control-3 ~ .slide-indicador 
+                  li:nth-child(3) .slide-circulo {
+                color: #428bca;
+            }
+            #titulo {
+                width: 100%;
+                position: absolute;
+                padding: 0px;
+                margin: 0px auto;
+                text-align: center;
+                font-size: 27px;
+                color: rgba(255, 255, 255, 1);
+                font-family: 'Open Sans', sans-serif;
+                z-index: 9999;
+                text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), 
+                     -1px 0px 2px rgba(255, 255, 255, 0);
+            }
+        </style>
+    </head>
+    <body>
+        <div class="slide">
+            <div class="slide-inner">
+                <input class="slide-open" type="radio" id="slide-1" 
+                      name="slide" aria-hidden="true" hidden="" checked="checked">
+                <div class="slide-item">
+                   <div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166946.jpg" width="400" height="320" allow="autoplay"></iframe></div>
+                </div>
+                <input class="slide-open" type="radio" id="slide-2" 
+                      name="slide" aria-hidden="true" hidden="">
+                <div class="slide-item">
+                   <div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166888.jpg" width="400" height="320" allow="autoplay"></iframe></div>
+                </div>
+                <input class="slide-open" type="radio" id="slide-3" 
+                      name="slide" aria-hidden="true" hidden="">
+                <div class="slide-item">
+                   <div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166867.jpg" width="400" height="320" allow="autoplay"></iframe></div>
+                </div>
+                <label for="slide-3" class="slide-control prev control-1">‹</label>
+                <label for="slide-2" class="slide-control next control-1">›</label>
+                <label for="slide-1" class="slide-control prev control-2">‹</label>
+                <label for="slide-3" class="slide-control next control-2">›</label>
+                <label for="slide-2" class="slide-control prev control-3">‹</label>
+                <label for="slide-1" class="slide-control next control-3">›</label>
+                <ol class="slide-indicador">
+                    <li>
+                        <label for="slide-1" class="slide-circulo">•</label>
+                    </li>
+                    <li>
+                        <label for="slide-2" class="slide-circulo">•</label>
+                    </li>
+                    <li>
+                        <label for="slide-3" class="slide-circulo">•</label>
+                    </li>
+                </ol>
+            </div>
+        </div>
+    </body>
+</html>
+
+ </div>
+  
+<div align="center"> 
+<iframe src="https://drive.google.com/file/d/1g6kvxvR8HOddyeq26izk2ADOLeJxP982/preview" width="320" height="480" allow="autoplay"></iframe>
+</div>
+2- Prueba con resina epoxi.
+Para esta prueba se utilizó resina epoxi con endurecedor al 50%, el tiempo de secado fue de 24h.
+
+Fotos y videos del proceso de desmolde. 
+<div align="center">
+
+<html>
+    <head>
+        <style>
+            .slide {
+                position: relative;
+                box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+                margin-top: 26px;
+            }
+            .slide-inner {
+                position: relative;
+                overflow: hidden;
+                width: 100%;
+                height: calc( 300px + 3em);
+            }
+            .slide-open:checked + .slide-item {
+                position: static;
+                opacity: 100;
+            }
+            .slide-item {
+                position: absolute;
+                opacity: 0;
+                -webkit-transition: opacity 0.6s ease-out;
+                transition: opacity 0.6s ease-out;
+            }
+            .slide-item img {
+                display: block;
+                height: auto;
+                max-width: 100%;
+            }
+            .slide-control {
+                background: rgba(0, 0, 0, 0.28);
+                border-radius: 50%;
+                color: #fff;
+                cursor: pointer;
+                display: none;
+                font-size: 40px;
+                height: 40px;
+                line-height: 35px;
+                position: absolute;
+                top: 50%;
+                -webkit-transform: translate(0, -50%);
+                cursor: pointer;
+                -ms-transform: translate(0, -50%);
+                transform: translate(0, -50%);
+                text-align: center;
+                width: 40px;
+                z-index: 10;
+            }
+            .slide-control.prev {
+                left: 2%;
+            }
+            .slide-control.next {
+                right: 2%;
+            }
+            .slide-control:hover {
+                background: rgba(0, 0, 0, 0.8);
+                color: #aaaaaa;
+            }
+            #slide-1:checked ~ .control-1,
+            #slide-2:checked ~ .control-2,
+            #slide-3:checked ~ .control-3 {
+                display: block;
+            }
+            .slide-indicador {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                position: absolute;
+                bottom: 2%;
+                left: 0;
+                right: 0;
+                text-align: center;
+                z-index: 10;
+            }
+            .slide-indicador li {
+                display: inline-block;
+                margin: 0 5px;
+            }
+            .slide-circulo {
+                color: #828282;
+                cursor: pointer;
+                display: block;
+                font-size: 35px;
+            }
+            .slide-circulo:hover {
+                color: #aaaaaa;
+            }
+            #slide-1:checked ~ .control-1 ~ .slide-indicador 
+                 li:nth-child(1) .slide-circulo,
+            #slide-2:checked ~ .control-2 ~ .slide-indicador 
+                  li:nth-child(2) .slide-circulo,
+            #slide-3:checked ~ .control-3 ~ .slide-indicador 
+                  li:nth-child(3) .slide-circulo {
+                color: #428bca;
+            }
+            #titulo {
+                width: 100%;
+                position: absolute;
+                padding: 0px;
+                margin: 0px auto;
+                text-align: center;
+                font-size: 27px;
+                color: rgba(255, 255, 255, 1);
+                font-family: 'Open Sans', sans-serif;
+                z-index: 9999;
+                text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), 
+                     -1px 0px 2px rgba(255, 255, 255, 0);
+            }
+        </style>
+    </head>
+    <body>
+        <div class="slide">
+            <div class="slide-inner">
+                <input class="slide-open" type="radio" id="slide-1" 
+                      name="slide" aria-hidden="true" hidden="" checked="checked">
+                <div class="slide-item">
+                   <div align="center"><iframe src="https://drive.google.com/file/d/1g65vQEjP5wy18wzISWvotvjFlGOu1qVy/preview" width="320" height="480" allow="autoplay"></iframe></div>
+                </div>
+                <input class="slide-open" type="radio" id="slide-2" 
+                      name="slide" aria-hidden="true" hidden="">
+                <div class="slide-item">
+                   <div align="center"><iframe src="https://drive.google.com/file/d/1fyPOB2v16m1RocQO5SKsFn2vVoazZw79/preview" width="320" height="480" allow="autoplay"></iframe></div>
+                </div>
+                <input class="slide-open" type="radio" id="slide-3" 
+                      name="slide" aria-hidden="true" hidden="">
+                <div class="slide-item">
+                   <div align="center"><iframe src="https://drive.google.com/file/d/1fcG3JSl6nFGqTOVNWTb-ZDhNYO4WbOz7/preview" width="640" height="480" allow="autoplay"></iframe></div>
+                </div>
+                <label for="slide-3" class="slide-control prev control-1">‹</label>
+                <label for="slide-2" class="slide-control next control-1">›</label>
+                <label for="slide-1" class="slide-control prev control-2">‹</label>
+                <label for="slide-3" class="slide-control next control-2">›</label>
+                <label for="slide-2" class="slide-control prev control-3">‹</label>
+                <label for="slide-1" class="slide-control next control-3">›</label>
+                <ol class="slide-indicador">
+                    <li>
+                        <label for="slide-1" class="slide-circulo">•</label>
+                    </li>
+                    <li>
+                        <label for="slide-2" class="slide-circulo">•</label>
+                    </li>
+                    <li>
+                        <label for="slide-3" class="slide-circulo">•</label>
+                    </li>
+                </ol>
+            </div>
+        </div>
+    </body>
+</html>
+
+ </div>
+
+ <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT07/1734099166764.jpg"></div>
+
+## Conclusión.
+
+Para el material compuesto debió ser mayor el tiempo de secado, al apresurar el desmolde se separaron las roscas del resto del modelo y también se partió al medio. Tanto las roscas como los ductos internos para los cables no se podrían conseguir con este molde (o quizá si se conseguirían pero sería casi imposible desmoldar sin romper). El hecho de que los soportes se quedaran incrustados en las ranuras de la rosca facilitó que se pudiera desmoldar el modelo hecho en resina epoxi. El desmolde para el colado con resina fue muy difícil, la resina se coló entre las juntas del molde lo que hizo que se pegaran y hubiera que acudir a la fuerza bruta para separarlos. La experiencia fue sumamente satisfactoria ya que me permitió experimentar con diferentes materiales y los obstáculos que surgen en el proceso, los aspectos a tener en cuenta a la hora de pensar en la manufactura por moldeo y las consideraciones de diseño a la hora de crear el molde.
