--- a/docs/tecnicos/mt08.md
+++ b/docs/tecnicos/mt08.md
@@ -1,3 +1,153 @@
-### WIP
+# MT08 - Control numérico computarizado (CNC)
 
-<div align="center"> </div>
+## Introducción
+
+La fabricación digital ha transformado la manera en que diseñamos y producimos objetos, permitiendo un control preciso y personalización avanzada. Dentro del mundo de la tecnología sustractiva, las fresadoras CNC (Control Numérico por Computadora), desempeñan un papel clave al permitir la creación de piezas a partir de la remoción controlada de material.
+
+### Fresadoras CNC
+
+Las fresadoras CNC o Routers CNC son máquinas controladas por computadora que utilizan diversas estrategias para cortar y modelar materiales como madera, plásticos, metales y otros. Estas máquinas funcionan mediante la lectura de un código G, que especifica las trayectorias de las herramientas de corte, velocidades de avance y otras variables necesarias para fabricar una pieza con precisión. Si bien es posible crear esta lista de instrucciones manualmente (principalmente en tornos CNC) existen diversos softwares que hacen ese trabajo quitando horas de cómputo, eso lo engloba el CAM (Computer-Aided Manufacturing) o manufactura asistida por computadora.  
+
+#### Ventajas
+
+- **Precisión y repetibilidad:** Capaces de producir piezas idénticas con tolerancias muy estrictas.
+- **Automatización:** Reducen el error humano al operar de forma autónoma.
+- **Flexibilidad:** Pueden adaptarse a diferentes proyectos simplemente cambiando los diseños CAD/CAM.
+
+#### Limitaciones
+
+- **Costo inicial elevado:** Requieren una inversión significativa en máquinas y software.
+- **Curva de aprendizaje:** La operación y programación demandan conocimiento técnico.
+
+### Diseño aplicado a CNC
+
+El diseño para fresadoras CNC debe considerar tanto las capacidades de la máquina como las características del material. Algunas consideraciones clave incluyen:
+
+1. **Material y herramientas:** Seleccionar herramientas de corte apropiadas según el material, ya que factores como la dureza o la ductilidad afectan los resultados.
+2. **Tolerancias:** Diseñar con tolerancias adecuadas para garantizar el ajuste y funcionalidad de las piezas.
+3. **Restricciones geométricas:** Considerar el diámetro de las herramientas y los ángulos máximos de corte para evitar errores.
+4. **Optimización del tiempo:** Diseñar trayectorias de corte eficientes para reducir el tiempo de mecanizado.
+
+### Estrategias de Mecanizado
+
+#### Estrategias 2D:
+**Mecanizado de Cara**: Consiste en limpiar o nivelar una superficie plana, eliminando material de manera uniforme. Se usa para preparar el material antes de otros procesos.
+
+**Mecanizado de Contorno**: Se enfoca en seguir los bordes del diseño para cortar o perfilar piezas con precisión.
+
+**Mecanizado por Ranura**: Se utiliza para crear cortes en forma de canal, ideal para insertar elementos o fabricar piezas con guías.
+
+**Taladrado**: Crea perforaciones precisas utilizando herramientas cilíndricas, esencial para ensamblajes o fijaciones.
+
+#### Estrategias 3D:
+
+**Mecanizado de Relieve por Planos**: Divide la pieza en secciones de diferentes alturas, trabajando en capas para crear formas escalonadas.
+
+**Mecanizado de Relieve en Paralelo**: Realiza pasadas lineales sobre la superficie del diseño, siguiendo una dirección fija para crear relieves suaves.
+
+**Mecanizado de Relieves en Espiral**: Utiliza trayectorias en forma de espiral para trabajar relieves complejos, eficiente en piezas curvas o redondeadas.
+
+**Mecanizado de Relieve en Espiral Transformada**: Combina la espiral con cambios progresivos en la profundidad o dirección, ideal para diseños más dinámicos y detallados.
+
+
+### Software de Mecanizado (Fusion 360)
+
+Fusion 360 es una herramienta poderosa que combina diseño, simulación y generación de trayectorias de mecanizado en un único entorno.
+
+##### Características clave:
+
+- **Modelado paramétrico:** Permite diseñar piezas ajustables mediante parámetros definidos.
+- **Simulación de trayectorias:** Visualiza el proceso de mecanizado antes de ejecutarlo.
+- **Exportación de código G:** Genera códigos listos para ser ejecutados en fresadoras CNC.
+
+Fusion 360 también facilita la integración con otras plataformas y permite compartir proyectos en la nube para la colaboración.
+
+### X Carve
+
+La X-Carve es una fresadora CNC de la marca Inventables, diseñada para satisfacer las necesidades tanto de aficionados avanzados como de profesionales. Su enfoque está en la versatilidad, la precisión y la facilidad de uso, haciendo que sea una herramienta valiosa en la fabricación digital.
+
+#### Características principales:
+
+Área de trabajo: 750 x 750 x 114 mm, adecuada para proyectos de mediano tamaño.
+
+Compatibilidad de husillo: Compatible con husillos DeWalt 26200 o Makita RT0700CX3/4, con velocidades de rotación entre 16,000 y 27,000 RPM.
+
+Materiales soportados: Trabaja con una amplia gama de materiales, como madera, plásticos (PP, PC, ABS, PA6), aluminio, cuero y placas de circuito impreso (PCBs).
+
+Precisión: Ofrece tolerancias de corte de 0.045 mm, garantizando acabados detallados y consistentes.
+
+Controlador: Incluye el X-Controller basado en firmware GRBL, una solución robusta y confiable para controlar la máquina.
+
+Software: Compatible con Easel CAM, un software fácil de usar para diseño y generación de trayectorias.
+
+Accesorios incluidos: Viene equipada con un kit completo que incluye motores Nema 23, sistema de control de polvo, pinzas, un kit de alineación, sistema de cadenas de arrastre y una mesa de desperdicio.
+
+Ventajas destacadas:
+Diseño modular: Su estructura permite actualizaciones y modificaciones, lo que la hace adaptable a necesidades cambiantes.
+
+Software intuitivo: Easel facilita el diseño y ejecución de proyectos incluso para principiantes.
+
+Flexibilidad: Ideal para trabajos que requieren precisión en diversos materiales.
+Con su diseño compacto y características profesionales, la X-Carve V2 se posiciona como una opción confiable en entornos educativos, talleres y proyectos de fabricación personalizada​
+
+Referencias: https://www.mybotshop.de/Inventables-X-Carve-V2-1000mm_2 
+
+
+### Medidas de Seguridad
+
+La seguridad es crucial al trabajar con estos equipos debido a los riesgos asociados, como piezas proyectadas, ruido y polvo. Algunas recomendaciones incluyen:
+
+1. **Equipo de protección personal:** Usar gafas de seguridad, tapones para los oídos y mascarillas contra el polvo.
+2. **Capacitación adecuada:** Asegurarse de que los operadores comprendan el funcionamiento de la máquina y las herramientas.
+3. **Mantenimiento regular:** Verificar el estado de las herramientas y componentes para evitar fallos.
+4. **Supervisión constante:** Nunca operar la máquina sin supervisión, especialmente en cortes largos o complejos.
+
+## Desarrollo 
+
+Para llevar a cabo la actividad asignada en el módulo MT08 correspondiente al mecanizado mediante control numérico computarizado, fue necesario familiarizarnos a las herramientas de CAM disponibles en el software Fusion 360. Para comenzar descargamos el modelo que se nos solicita mecanizar y posteriormente lo cargamos en el software.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/FOTO CARGA.png"></div>
+
+Una vez cargado el modelo debemos acceder a la sección FABRICACIÓN.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/FOTO FABRICACION.png"></div>
+
+Luego configuramos la máquina (Autodesk Generic 3-axis XYZ Router) y la herramienta de corte (⅛ flat end mill) a utilizar.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/config_maquina.png"></div>
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/herramienta.png"></div>
+
+Ahora podemos comenzar con las operaciones de mecanizado 2D que consideremos necesarias para completar el mecanizado del modelo, incluso podemos darle aspectos al material, en este caso se le dió aspecto a madera. Los procesos a ejecutar serán: 
+
+Cajeras 2D para la figura en cruz, el orificio central, y los 4 huecos de los vértices del modelo. Mientras que una operación de taladrado en los 4 vértices y por último un contorno que copia la circunferencia del modelo. 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/cajera1.png"></div>
+
+A continuación se puede apreciar la simulación de la secuencia de acciones antes mencionadas para realizar el mecanizado.
+
+<div align="center"><iframe src="https://drive.google.com/file/d/1rWcIsH8hPQLPuxB89r_lAFi3xTPiD9gq/preview" width="640" height="480" allow="autoplay"></iframe></div>
+
+Antes de lograr este resultado un gran inconveniente fue controlar la profundidad de corte de cada operación, sucedía que en cada operación se cortaba la totalidad del espesor del material. Esto se debió a que había un error en las alturas, en lugar de tener seleccionada la sección o arista que determine la profundidad de la operación estaba seteada la opción de “más bajo de la sección”. 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/solucion a problema de profundidades.png"></div>
+
+Y por último, y no menos complicado, el postproceso: al intentar exportar el archivo gcode con extensión .nc surgieron los siguientes errores:
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/el problema segia.png"></div>
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/el notificacion de error nc.png"></div>
+
+Esto lo ocasionó la no configuración del origen desde el seteo de la máquina respecto a la geometría del material. Se soluciona al hacer coincidir el mismo vértice que elegimos cómo origen en las operaciones con el origen de la máquina elegida, a pesar de no haber captado el contenido del archivo .nc por la grabación de pantalla en el siguiente registro se muestran los pasos a seguir.
+
+<div align="center"><iframe src="https://drive.google.com/file/d/1Z86AuFpcoHwCFjtn2XDQt67SOem3a7Bl/preview" width="640" height="480" allow="autoplay"></iframe></div>
+
+Por último, en el siguiente registro se pueden apreciar los pasos a seguir para realizar el mecanizado en la xCarve. 
+
+<div align="center"><iframe src="https://drive.google.com/file/d/1hQ4kPk6M8TPJTttpbVqEmPtG6j8JsjR0/preview" width="320" height="480" allow="autoplay"></iframe></div>
+
+Lamentablemente el final no fue el mejor ya que en el proceso se partió la herramienta y no se pudieron realizar la totalidad de las operaciones. 
+
+## Conclusión
+
+La tecnología sustractiva, en el caso de las fresadoras CNC, resulta una herramienta fundamental en la fabricación digital. Esta tecnología nos permite realizar procesos que no resultan tan eficientes si se intentan realizar con tecnologías cómo la impresión 3D ya que se ahorra tiempo de producción, como contraparte de esto, desde el principio del proceso deberemos pensar en los prototipos (su concepción y diseño) desde una perspectiva que contemple las ventajas y requerimientos de este tipo de proceso de manufactura aditiva. Comprender su funcionamiento, diseñar de manera eficiente, y operar con seguridad son elementos esenciales para aprovechar al máximo su potencial. 
