--- a/docs/tecnicos/mt09.md
+++ b/docs/tecnicos/mt09.md
@@ -112,7 +112,8 @@ Para la realización de la actividad práctica del módulo de Moldes he decidido
 Lo primero fue crear el molde, para ello tomamos como referencia el CAD de nuestro modelo final de nuestro modelo final en Onshape y procedemos a crear las diferentes partes de nuestro molde, contemplando las características geométricas de nuestro modelo y el posterior desmolde, cuántas partes se necesitan y cómo deberán estar diseñados los encastres de cada pieza del molde. Finalmente se definió que un total de 8 piezas principales serían suficientes para crear el molde adecuado. 
 
 
-<div align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/wgrfSmlBg-I?si=PIe-XLs0ALDzMiQs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+<div align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/wgrfSmlBg-I?si=PIe-XLs0ALDzMiQs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 
 Se imprimieron en PLA blanco en la Ultimaker 3 del LabA, lamentablemente las piezas más pequeñas (que ofician de ductos para los cables) se estropearon por lo que no las usaremos para las pruebas.
 
@@ -121,8 +122,6 @@ Se imprimieron en PLA blanco en la Ultimaker 3 del LabA, lamentablemente las pie
  1- Prueba con material compuesto
 Para esta prueba se utilizó un material compuesto de aserrín, cola vinílica y arcilla de secado sin horno. Tiempo de secado 24h.
  
-<div align="center">
-
 <html>
     <head>
         <style>
@@ -272,9 +271,8 @@ Para esta prueba se utilizó un material compuesto de aserrín, cola vinílica y
         </div>
     </body>
 </html>
-
- </div>
   
+
 <div align="center"> 
 <iframe src="https://drive.google.com/file/d/1g6kvxvR8HOddyeq26izk2ADOLeJxP982/preview" width="320" height="480" allow="autoplay"></iframe>
 </div>
@@ -282,7 +280,6 @@ Para esta prueba se utilizó un material compuesto de aserrín, cola vinílica y
 Para esta prueba se utilizó resina epoxi con endurecedor al 50%, el tiempo de secado fue de 24h.
 
 Fotos y videos del proceso de desmolde. 
-<div align="center">
 
 <html>
     <head>
@@ -433,10 +430,13 @@ Fotos y videos del proceso de desmolde.
         </div>
     </body>
 </html>
+<div align="center">
+    
+</div>
 
- </div>
+Resulados finales
 
- <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT07/1734099166764.jpg"></div>
+ <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166764.jpg"></div>
 
 ## Conclusión.
 
