--- a/docs/tecnicos/mt08.md
+++ b/docs/tecnicos/mt08.md
@@ -106,11 +106,11 @@ La seguridad es crucial al trabajar con estos equipos debido a los riesgos asoci
 
 Para llevar a cabo la actividad asignada en el módulo MT08 correspondiente al mecanizado mediante control numérico computarizado, fue necesario familiarizarnos a las herramientas de CAM disponibles en el software Fusion 360. Para comenzar descargamos el modelo que se nos solicita mecanizar y posteriormente lo cargamos en el software.
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/FOTO CARGA.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/CARGA.png"></div>
 
 Una vez cargado el modelo debemos acceder a la sección FABRICACIÓN.
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/FOTO FABRICACION.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT08/FABRICACION.png"></div>
 
 Luego configuramos la máquina (Autodesk Generic 3-axis XYZ Router) y la herramienta de corte (⅛ flat end mill) a utilizar.
 
