--- a/docs/tecnicos/mt09.md
+++ b/docs/tecnicos/mt09.md
@@ -122,11 +122,11 @@ Se imprimieron en PLA blanco en la Ultimaker 3 del LabA, lamentablemente las pie
  1- Prueba con material compuesto
 Para esta prueba se utilizó un material compuesto de aserrín, cola vinílica y arcilla de secado sin horno. Tiempo de secado 24h.
  
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166946.jpg" width="320" height="480" ></iframe></div>
+<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166946.jpg"></iframe></div>
 
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166888.jpg" width="320" height="480" ></iframe></div>
+<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166888.jpg"></iframe></div>
 
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166867.jpg" width="320" height="480" ></iframe></div>
+<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166867.jpg"></iframe></div>
 
 <div align="center"> 
 <iframe src="https://drive.google.com/file/d/1g6kvxvR8HOddyeq26izk2ADOLeJxP982/preview" width="320" height="480" allow="autoplay"></iframe></div>
@@ -140,7 +140,7 @@ Fotos y videos del proceso de desmolde.
 
 <div align="center"><iframe src="https://drive.google.com/file/d/1fyPOB2v16m1RocQO5SKsFn2vVoazZw79/preview" width="320" height="480" allow="autoplay"></iframe></div>
 
-<div align="center"><iframe src="https://drive.google.com/file/d/1fcG3JSl6nFGqTOVNWTb-ZDhNYO4WbOz7/preview" width="320" height="480" allow="autoplay"></iframe></div>
+<div align="center"><iframe src="https://drive.google.com/file/d/1fcG3JSl6nFGqTOVNWTb-ZDhNYO4WbOz7/preview" width="640" height="480" allow="autoplay"></iframe></div>
 
 
 Resulados finales
