--- a/docs/tecnicos/mt09.md
+++ b/docs/tecnicos/mt09.md
@@ -117,19 +117,27 @@ Lo primero fue crear el molde, para ello tomamos como referencia el CAD de nuest
 
 Se imprimieron en PLA blanco en la Ultimaker 3 del LabA, lamentablemente las piezas más pequeñas (que ofician de ductos para los cables) se estropearon por lo que no las usaremos para las pruebas.
 
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166955.jpg"></iframe></div>
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166955.jpg"></div>
 
  1- Prueba con material compuesto
 Para esta prueba se utilizó un material compuesto de aserrín, cola vinílica y arcilla de secado sin horno. Tiempo de secado 24h.
  
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166946.jpg"></iframe></div>
+<div align="center">
+    <img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166946.jpg" ></iframe>
+</div>
 
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166888.jpg"></iframe></div>
+<div align="center">
+    <img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166888.jpg"></iframe>
+</div>
 
-<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166867.jpg"></iframe></div>
+<div align="center">
+    <img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166867.jpg" ></iframe>
+</div>
 
 <div align="center"> 
-<iframe src="https://drive.google.com/file/d/1g6kvxvR8HOddyeq26izk2ADOLeJxP982/preview" width="320" height="480" allow="autoplay"></iframe></div>
+    <iframe src="https://drive.google.com/file/d/1g6kvxvR8HOddyeq26izk2ADOLeJxP982/preview" width="640" height="480" allow="autoplay"></iframe>
+</div>
 
 2- Prueba con resina epoxi.
 Para esta prueba se utilizó resina epoxi con endurecedor al 50%, el tiempo de secado fue de 24h.
@@ -145,7 +153,9 @@ Fotos y videos del proceso de desmolde.
 
 Resulados finales
 
- <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166764.jpg"></div>
+ <div align="center">
+    <img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT09/1734099166764.jpg">
+ </div>
 
 ## Conclusión.
 
